--- a/api/.env.example
+++ b/api/.env.example
@@ -43,16 +43,15 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+SOKETI_PORT=6001
+SOKETI_DB_REDIS_HOST="${REDIS_HOST}"
+SOKETI_DB_REDIS_PORT="${REDIS_PORT}"
+SOKETI_ADAPTER_DRIVER=redis
+SOKETI_RATE_LIMITER_DRIVER=redis
 
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+PUSHER_APP_ID=app-id
+PUSHER_APP_KEY=app-key
+PUSHER_APP_SECRET=app-secret
+PUSHER_HOST=127.0.0.1
+PUSHER_PORT="${SOKETI_PORT}"
+PUSHER_SCHEME=http
