--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     api:
         container_name: fusenemix-api
         build:
-            context: ./vendor/laravel/sail/runtimes/8.2
+            context: ./docker
             dockerfile: Dockerfile
             args:
                 WWWGROUP: "${WWWGROUP}"
@@ -114,6 +114,17 @@ services:
         ports:
             - "${FORWARD_MAILPIT_PORT:-1025}:1025"
             - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
+        networks:
+            - fusenemix
+    soketi:
+        container_name: fusenemix-soketi
+        image: "quay.io/soketi/soketi:latest-16-alpine"
+        environment:
+            SOKETI_DEBUG: "1"
+            SOKETI_METRICS_SERVER_PORT: "9601"
+        ports:
+            - "${SOKETI_PORT:-6001}:6001"
+            - "${SOKETI_METRICS_SERVER_PORT:-9601}:9601"
         networks:
             - fusenemix
 networks:
