CHORE: github workflow

--- a/.github/workflows/api.develop.yml
+++ b/.github/workflows/api.develop.yml
@@ -18,7 +18,7 @@ jobs:
           MYSQL_ROOT_HOST: "%"
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: fusenemix
+          MYSQL_DATABASE: testing
           MYSQL_USER: fusenemix
           MYSQL_PASSWORD: password
         ports:
@@ -34,6 +34,12 @@ jobs:
         with:
           php-version: "8.2"
       - uses: actions/checkout@v2
+      - name: Cache apt packages
+        uses: actions/cache@v2
+        with:
+          path: /var/cache/apt
+          key: ${{ runner.os }}-apt-${{ hashFiles('**/apt.lock') }}
+          restore-keys: ${{ runner.os }}-apt-
       - name: Install apt dependencies
         run: sudo apt-get install -y ffmpeg
       - name: Copy .env
