--- a/.github/workflows/api.develop.yml
+++ b/.github/workflows/api.develop.yml
@@ -13,7 +13,7 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     services:
       fusenemix-mysql:
-        image: mysql:8.0
+        image: mysql/mysql-server:8.0
         env:
           MYSQL_ROOT_HOST: "%"
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
