--- a/.github/workflows/api.develop.yml
+++ b/.github/workflows/api.develop.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           MYSQL_ROOT_HOST: "%"
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
-          MYSQL_DATABASE: fusenemix
+          MYSQL_DATABASE: testing
           MYSQL_USER: fusenemix
           MYSQL_PASSWORD: password
         ports:
