--- a/api/package.json
+++ b/api/package.json
@@ -3,34 +3,57 @@
   "module": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "bun run src/main.ts",
-    "serve": "bun --watch run src/main.ts",
-    "migrate": "bun run src/scripts/migrate.ts",
+    "serve": "nodemon src/main.ts 0.0.0.0 8000",
+    "lint": "eslint 'src/**'",
+    "format": "prettier src",
+    "format:check": "prettier src --check",
+    "migrate": "ts-node src/scripts/migrate.ts",
     "migrate:generate": "drizzle-kit generate:mysql",
-    "seed": "bun run src/scripts/seed.ts"
+    "seed": "ts-node src/scripts/seed.ts",
+    "reset": "ts-node src/scripts/reset.ts",
+    "jwt:secret": "ts-node src/scripts/jwt/secret.ts"
   },
   "devDependencies": {
     "@fastify/middie": "^8.3.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/lodash": "^4.14.196",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^20.4.5",
-    "bun-types": "latest",
+    "@types/which": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "cors": "^2.8.5",
     "drizzle-kit": "^0.19.12",
+    "eslint": "^8.46.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.7.3",
     "@types/jsonwebtoken": "8.5.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
+    "error-cause-polyfill": "^2.0.0",
     "fastify": "^4.21.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
     "mysql2": "^3.5.2",
     "ulid": "^2.3.0",
+    "which": "^3.0.1",
+    "youtube-mp3-downloader": "^0.7.11",
+    "ytdl-core": "^4.11.5",
     "yup": "^1.2.0"
   }
 }
