--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "module": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "serve": "nodemon src/main.ts 0.0.0.0 8000",
+    "serve": "nodemon src/server.ts",
     "lint": "eslint 'src/**'",
     "format": "prettier src",
     "format:check": "prettier src --check",
@@ -12,10 +12,13 @@
     "seed": "ts-node src/scripts/seed.ts",
     "reset": "ts-node src/scripts/reset.ts",
     "test": "ts-node src/tests/index.test.ts",
-    "jwt:secret": "ts-node src/scripts/jwt/secret.ts"
+    "jwt:secret": "ts-node src/scripts/jwt/secret.ts",
+    "build:clean": "rm -rf ./build",
+    "build": "npm run build:clean && tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json",
+    "build:check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@fastify/middie": "^8.3.0",
+    "@faker-js/faker": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/fluent-ffmpeg": "^2.1.21",
@@ -25,30 +28,33 @@
     "@types/tap": "^15.0.8",
     "@types/which": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "cors": "^2.8.5",
-    "drizzle-kit": "^0.19.12",
     "eslint": "^8.46.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.0",
     "prettier": "^3.0.0",
     "tap": "^16.3.8",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@fastify/middie": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@types/jsonwebtoken": "8.5.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.12",
     "drizzle-orm": "^0.27.2",
     "fastify": "^4.21.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "mysql2": "^3.5.2",
