--- a/api/package.json
+++ b/api/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "serve": "nodemon src/server.ts",
     "lint": "eslint 'src/**'",
+    "lint:fix": "npm run lint -- --fix",
     "format": "prettier src",
     "format:check": "prettier src --check",
     "migrate": "ts-node src/scripts/migrate.ts",
     "migrate:generate": "drizzle-kit generate:mysql",
     "seed": "ts-node src/scripts/seed.ts",
     "reset": "ts-node src/scripts/reset.ts",
-    "test": "ts-node src/tests/index.test.ts",
+    "test": "tap --ts",
     "jwt:secret": "ts-node src/scripts/jwt/secret.ts",
+    "queue:work": "ts-node src/scripts/queue/work.ts",
     "build:clean": "rm -rf ./build",
     "build": "npm run build:clean && tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json",
     "build:check": "tsc --noEmit"
@@ -27,6 +29,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/node": "^20.4.5",
     "@types/qs": "^6.9.7",
+    "@types/request": "^2.48.8",
     "@types/tap": "^15.0.8",
     "@types/which": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -38,6 +41,7 @@
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.0",
     "prettier": "^3.0.0",
+    "request": "^2.88.2",
     "tap": "^16.3.8",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
@@ -49,6 +53,7 @@
     "@fastify/middie": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "axios": "^1.4.0",
+    "axios-mock-adapter": "^1.21.5",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
@@ -57,11 +62,13 @@
     "drizzle-orm": "^0.27.2",
     "fastify": "^4.21.0",
     "fastify-plugin": "^4.5.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "mysql2": "^3.5.2",
     "qs": "^6.11.2",
+    "redis": "^4.6.7",
     "socket.io": "^4.7.2",
     "ulid": "^2.3.0",
     "which": "^3.0.1",
