--- a/.github/workflows/api.develop.yml
+++ b/.github/workflows/api.develop.yml
@@ -34,6 +34,11 @@ jobs:
         image: redis:alpine
         ports:
           - 6379:6379
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
