--- a/.github/workflows/api.develop.yml
+++ b/.github/workflows/api.develop.yml
@@ -42,6 +42,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Update system
+        run: sudo apt-get update
       - name: Install apt dependencies
         run: sudo apt-get install -y ffmpeg
       - name: Use Node.js ${{ matrix.node-version }}
