--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/content-disposition": "^0.5.6",
     "@types/cors": "^2.8.13",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/jsonwebtoken": "8.5.1",
